# P2P_Navy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build_project.sh  communication.c  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrunenv-release-x86_64.sh  function2.c  init_boat.c  main.cpp  navy.c  run_game.sh  struct.h  turn_management.c
include/: GameFunc.hpp  HandleTurns.hpp  InitMaps.hpp  Network.hpp  VerifyBoatsFile.hpp  colors.hpp  comunication.hpp  define.h  menu.hpp  my.h  struct.hpp  types.hpp
lib/my/: Makefile  biggest_nb.c  compare_str.c  create_2d_str.c  error_gestion.c  fill_navy_str.c  fill_navy_str_2.c  my_getnbr.c  my_itoa.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_strcat.c  my_strcpy.c  my_strlen.c  my_strlen_int.c  print_game.c
src/: GameFunc.cpp  HandleTurns.cpp  InitMaps.cpp  Network.cpp  VerifyBoatsFile.cpp  communication.cpp  function1.c  init_matrix.c  main.cpp  menu.cpp  navy.c  network.c
